fix: set overflow hidden in slider section

--- a/src/components/BannerSlider/BannerSlider.module.sass
+++ b/src/components/BannerSlider/BannerSlider.module.sass
@@ -1,4 +1,5 @@
 .section
+    position: relative
     overflow: hidden
 
 .swiper
