--- a/src/components/BreadCrumbs/BreadCrumbs.module.sass
+++ b/src/components/BreadCrumbs/BreadCrumbs.module.sass
@@ -2,6 +2,7 @@
   padding-top: 25px
   display: flex
   justify-content: space-between
+  overflow: hidden
 
 .list
   display: flex
