--- a/src/components/CinemaDetails/CinemaDetails.module.sass
+++ b/src/components/CinemaDetails/CinemaDetails.module.sass
@@ -2,6 +2,7 @@
 
 .section
     padding: 24px 0
+    overflow: hidden
     &__container
         width: 80%
 
