--- a/src/components/CommentsSlider/CommentsSlider.module.sass
+++ b/src/components/CommentsSlider/CommentsSlider.module.sass
@@ -3,6 +3,7 @@
 .section
   position: relative
   padding: 24px 0
+  overflow: hidden
 
   &__row
     display: flex
