--- a/src/components/CreatorsList/CreatorsList.module.sass
+++ b/src/components/CreatorsList/CreatorsList.module.sass
@@ -3,6 +3,7 @@
 .container
   display: flex
   padding: 24px 0
+  overflow: hidden
 
   .items
     display: grid
