--- a/src/components/WatchAllDevices/WatchAllDevices.module.sass
+++ b/src/components/WatchAllDevices/WatchAllDevices.module.sass
@@ -4,6 +4,7 @@
   padding: 48px 0
   display: flex
   width: 100%
+  overflow: hidden
 
   .appeal
     display: flex
